--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tax_consultation",
+  "name": "doctor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "@types/bootstrap": "^5.2.10",
+    "@types/react-bootstrap": "^0.32.37",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.5",
+    "boxicons": "^2.1.4",
+    "next": "^15.3.0",
+    "react": "^19.1.0",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^19.1.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.5.0",
+    "react-scroll": "^1.9.3",
+    "reactstrap": "^9.2.3",
+    "sass": "^1.85.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "@types/aos": "^3.0.7",
+    "@types/node": "^20.17.30",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19",
+    "@types/react-scroll": "^1.8.10",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3"
   }
 }
